...
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="purchase_activity_label">Purchase</string>
    <string name="error_credit_card">Invalid Credit Card Number</string>
    <string name="error_email">Invalid Email</string>
    <string name="success">Success</string>
    <string name="error">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_des">icon</string>
...
