<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.PlacesFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.ActionBarTheme"
        app:title="@string/title_places"
        app:titleTextColor="@color/action_bar_title"/>

    <android.support.v7.widget.RecyclerView
        android:layout_margin="8dp"
        android:layout_below="@+id/toolbar"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>
